# hasoc2025

./: .gitignore  compare_with_xlm.py  main.py  prepare_for_submission.py  pyproject.toml  retriever.py  train_kw_model.py
configs/: prompt.yaml
data/output/: Bangla_train_images_50_images.csv  Bangla_train_images_ocr_full_train.csv  Bangla_train_images_test10ocr  Bangla_train_images_test10ocr_2p5_flash  Bodo_train_images_50_images.csv  Bodo_train_images_ocr_full_train.csv  Bodo_train_images_test10ocr  Bodo_train_images_test10ocr_2p5_flash  Gujarati_train_images_50_images.csv  Gujarati_train_images_ocr_full_train.csv  Gujarati_train_images_test10ocr  Gujarati_train_images_test10ocr_2p5_flash  Hindi_train_images_50_images.csv  Hindi_train_images_ocr_full_train.csv  Hindi_train_images_test10ocr  Hindi_train_images_test10ocr_2p5_flash  scores_5_test_screenshots.csv
src/common/: constants.py  logging.py
src/gemini/: gemini.py  gemini_prepare_for_retriever.py  gemini_retriever.py  gemini_score.py
src/kw_model/: kw_model.py
src/prompting/: few_shots_prompt_builder.py
